if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
add_subdirectory(FreeBSD)
endif()
add_subdirectory(gdb-remote)
if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
add_subdirectory(Linux)
endif()
#add_subdirectory(mach-core)
#add_subdirectory(MacOSx-Kernel)
if(NOT(CMAKE_SYSTEM_NAME STREQUAL "Windows"))
add_subdirectory(POSIX)
endif()
add_subdirectory(Utility)
